# PicoPan

./: .gitignore  CMakeLists.txt  README.md  ak8419.cpp  ak8419.h  ak8419.pio  camera.cpp  camera.h  main.cpp  static.html  static_class.html  static_old.html  tiff.h
WifiInterface/: CMakeLists.txt  ak8419.cpp  ak8419.h  camera.cpp  camera.h  main.cpp  roadmap.txt  step.pio  tiff.cpp  tiff.h
WifiInterface/include/: lwipopts.h
ak8419/: CMakeLists.txt  ak8419.cpp  ak8419.h  ak8419.pio  pico-sdio-example.code-workspace  tiff.c
bench/: bench.cpp
libs/: CMakeLists.txt
libs/sdio/: sd_card_sdio.cpp  sdio.cpp  sdio_old.pio  sdiohs.pio
libs/ws-server/: CMakeLists.txt  client_connection.cpp  web_socket_server_internal.cpp
sdio/: sdio.cpp  sdio.h  sdio.pio
ws-server/: CMakeLists.txt  client_connection.cpp  client_connection.h  http_handler.cpp  web_socket_message_builder.cpp
